--- a/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
+++ b/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
@@ -67,7 +67,16 @@
 	  <MauiXaml Update="Startpage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\EnesetunnePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\MeeldetuletusedPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\TreeningudPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\VeejalgiminePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
