--- a/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
+++ b/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
@@ -70,7 +70,16 @@
 	  <MauiXaml Update="View\EnesetunnePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\HommikusookPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\LounasookPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\MeeldetuletusedPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\ToidukorradPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="View\TreeningudPage.xaml">
