--- a/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
+++ b/Tervisipaevik_Daria_Valeria/Tervisipaevik_Daria_Valeria.csproj
@@ -57,6 +57,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\hommikusook.jpg" />
+	  <None Remove="Resources\Images\louna.jpg" />
+	  <None Remove="Resources\Images\ohtusook.jpg" />
+	  <None Remove="Resources\Images\tuju1.PNG" />
+	  <None Remove="Resources\Images\tuju2.PNG" />
+	  <None Remove="Resources\Images\tuju3.PNG" />
+	  <None Remove="Resources\Images\tuju4.PNG" />
+	  <None Remove="Resources\Images\tuju5.PNG" />
+	  <None Remove="Resources\Images\tuju6.PNG" />
+	  <None Remove="Resources\Images\vahepala.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -65,6 +78,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Startpage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="StartPage1.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="View\EnesetunnePage.xaml">
